Jupyter file updated.

--- a/code/RFM-08_J2_Perturbation_Effects.ipynb
+++ b/code/RFM-08_J2_Perturbation_Effects.ipynb
@@ -128,13 +128,13 @@
    "id": "0fc7e4be",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "    \\dot\\Omega = -\\frac{3nJ_2R^2}{2a^2(1-e^2)^2}\\cos i\n",
-    "\\end{equation}\n",
+    "\\end{equation*}\n",
     "with the mean motion\n",
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "n = \\sqrt{\\frac{\\mu}{a^3}}\n",
-    "\\end{equation}\n",
+    "\\end{equation*}\n",
     "Note: The plot below is for circular orbits with an altitude of $h$."
    ]
   },
@@ -178,16 +178,16 @@
    "id": "60d56ccd",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "    \\dot\\omega = -\\frac{3nJ_2R^2}{2a^2(1-e^2)^2}\\left(\\frac{5}{2}\\sin^2 i -2\\right)\n",
-    "\\end{equation}\n",
+    "\\end{equation*}\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "    r_p &= R_E+h_p\\\\\n",
     "    r_a &= R_E+h_a\\\\\n",
     "    a &= \\frac{r_p+r_a}{2}\\\\\n",
     "    r_p &= a(1-e) \\quad\\Leftrightarrow\\quad e = 1 - \\frac{r_p}{a}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "Note: The plot below is for orbits with a pericenter altitude of $h_p = 200\\,\\mathrm{km}$ and an apocenter altitude of $h_a$."
    ]
