Replaced np.power() with **

--- a/code/RFM-08_J2_Perturbation_Effects.ipynb
+++ b/code/RFM-08_J2_Perturbation_Effects.ipynb
@@ -63,14 +63,14 @@
     "        self.a = r\n",
     "        self.rp = r\n",
     "        self.ra = r\n",
-    "        self.n = np.sqrt(e.mu / np.power(r, 3))\n",
+    "        self.n = (e.mu / r**3)**0.5\n",
     "\n",
     "    def set_elliptic_orbit(self, hp, ha):\n",
     "        self.rp = e.R + hp\n",
     "        self.ra = e.R + ha\n",
     "        self.a = (self.rp + self.ra) / 2\n",
     "        self.ecc = 1 - self.rp / self.a\n",
-    "        self.n = np.sqrt(e.mu / np.power(self.a, 3))"
+    "        self.n = (e.mu / self.a**3)**0.5"
    ]
   },
   {
@@ -84,14 +84,14 @@
     "    return angle * (180 / np.pi) * 86400\n",
     "\n",
     "def calculate_prefactor(orb):  # Calculates prefactor in [°/d]\n",
-    "    pref = -3 * orb.n * e.J2 * np.power(e.R, 2) / (2 * np.power(orb.a, 2) * np.power(1 - np.power(orb.ecc, 2), 2))\n",
+    "    pref = -3 * orb.n * e.J2 * e.R**2 / (2 * orb.a**2 * (1 - orb.ecc**2)**2)\n",
     "    return to_deg_per_day(pref)\n",
     "\n",
     "def rotation_nodal_line(i, orb):  # Calculates dOmega / dt in [°/d]\n",
     "    return calculate_prefactor(orb) * np.cos(np.deg2rad(i))\n",
     "\n",
     "def rotation_apsidal_line(i, orb):  # Calculates domega / dt in [°/d]\n",
-    "    return calculate_prefactor(orb) * (5/2 * np.power(np.sin(np.deg2rad(i)), 2) - 2)"
+    "    return calculate_prefactor(orb) * (5/2 * np.sin(np.deg2rad(i))**2 - 2)"
    ]
   },
   {
