Updated Scholz's Star problem.

--- a/code/RFM-04_Scholz's_Star.ipynb
+++ b/code/RFM-04_Scholz's_Star.ipynb
@@ -1,9 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5be8d9af",
+   "metadata": {},
+   "source": [
+    "This notebook was created exclusively for the course \"Raumflugmechanik\"\n",
+    "(Spaceflight Dynamics) at FH Aachen University of Applied Sciences\n",
+    "by Prof. Dr. Bernd Dachwald on 06 November 2021."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0456ef27",
+   "metadata": {},
+   "source": [
+    "### Exemplary solution for additional workbook problem on Scholz's Star"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7f435bd3-06ce-4c06-850b-c31f83f29a31",
+   "execution_count": 8,
+   "id": "d0b6153d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "dfc467e6-176f-43f1-9632-d17f3a768b75",
    "metadata": {},
    "outputs": [],
@@ -23,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "3ccd2333-c5b7-4543-9c94-bf07bb054a5c",
    "metadata": {},
    "outputs": [
@@ -45,14 +63,14 @@
    "id": "4c1f2334-e85d-4c30-b0eb-eeb55017f26b",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "V_{OCO} = \\sqrt\\frac{\\mu}{r_{OCO}}\n",
-    "\\end{equation}"
+    "\\end{equation*}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "f1ff3a4f-fcc6-47da-8958-72ddbe9ab8f7",
    "metadata": {},
    "outputs": [
@@ -74,15 +92,15 @@
    "id": "d2f1d76b",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "a &= \\frac{r_p+r_a}{2}\\\\\n",
     "V_{crit} &= \\sqrt{\\frac{2\\mu}{r_a}-\\frac{\\mu}{a}}\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "e416e708-aca9-4a6c-87eb-4fe51ba78743",
    "metadata": {},
    "outputs": [
@@ -109,14 +127,14 @@
    "id": "4ca287df",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "r_a = a(1+e) \\quad\\Leftrightarrow\\quad e=\\frac{r_a}{a}-1\n",
-    "\\end{equation}"
+    "\\end{equation*}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "3c3fef8d-e051-4e90-b3f7-a7477f130ec3",
    "metadata": {},
    "outputs": [
@@ -138,14 +156,14 @@
    "id": "28991334",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "TOF = \\frac{P}{2} = \\pi\\sqrt\\frac{a^3}{\\mu}\n",
-    "\\end{equation}"
+    "\\end{equation*}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "555cde1b-a24d-4eda-a053-ee394a4f5528",
    "metadata": {},
    "outputs": [
@@ -164,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "eb5ca8d8-3580-45f5-a190-b50fe7e1a554",
    "metadata": {},
    "outputs": [
@@ -186,14 +204,14 @@
    "id": "c330a5c0",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "V_p = \\sqrt{\\frac{2\\mu}{r_p}-\\frac{\\mu}{a}}\n",
-    "\\end{equation}"
+    "\\end{equation*}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "2c04bef9-b7ab-413d-b1c5-93cf0dff69f9",
    "metadata": {},
    "outputs": [
