SSO-inclination improved.

--- a/code/RFM-08_SSO_Inclination.ipynb
+++ b/code/RFM-08_SSO_Inclination.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "71004ec2",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b3d43c59",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "75647f8d",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "4411f636",
    "metadata": {},
    "outputs": [
@@ -70,13 +70,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun-synchronous rotation of the nodal line = 1.991021277657232e-07 rad/s = 0.9856262833675564 deg/day\n"
+      "Sun-synchronous rotation of the nodal line = 1.991021e-07 rad/s = 0.985626 deg/day\n"
      ]
     }
    ],
    "source": [
     "dOmegaSSO = 2 * np.pi / (365.25 * 86400)\n",
-    "print(\"Sun-synchronous rotation of the nodal line =\", dOmegaSSO, \"rad/s =\", np.rad2deg(dOmegaSSO) * 86400, \"deg/day\")"
+    "print(\"Sun-synchronous rotation of the nodal line = %e rad/s = %f deg/day\" %(dOmegaSSO, np.rad2deg(dOmegaSSO) * 86400))"
    ]
   },
   {
@@ -85,9 +85,9 @@
    "metadata": {},
    "source": [
     "\\begin{equation*}\n",
-    "    1.991 \\times 10^{-7} \\,\\mathrm{rad/s} = -\\frac{3nJ_2R^2}{2a^2}\\cos i\n",
+    "    1.991021 \\times 10^{-7} \\,\\mathrm{rad/s} = -\\frac{3nJ_2R^2}{2a^2}\\cos i\n",
     "    \\quad\\Leftrightarrow\\quad\n",
-    "    i = \\cos^{-1}\\left(-\\frac{2a^2}{3nJ_2R^2}\\cdot 1.991 \\times 10^{-7} \\,\\mathrm{rad/s}\\right)\n",
+    "    i = \\cos^{-1}\\left(-\\frac{2a^2}{3nJ_2R^2}\\cdot 1.991021 \\times 10^{-7} \\,\\mathrm{rad/s}\\right)\n",
     "\\end{equation*}\n",
     "with the mean motion\n",
     "\\begin{equation*}\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "06b8a9f4",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "b8c98e62",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "4fbd24ba",
    "metadata": {},
    "outputs": [
