Added Jupyter/Python solutions for Problems 7.1-8.

--- a/problems/RFM-07_Solution_Problem_1.ipynb
+++ b/problems/RFM-07_Solution_Problem_1.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "# Constants for this problem\n",
-    "μ = 42828.3  # Gravitational parameter of Mars in [km^3/s^2]\n",
-    "R = 3397     # Mars radius in [km]"
+    "μ = 398600.4  # Gravitational parameter of Earth in [km^3/s^2]\n",
+    "R = 6378.14   # Earth radius in [km]"
    ]
   },
   {
@@ -17,22 +17,33 @@
    "execution_count": 2,
    "id": "f71e9d3d-f0e9-4ad8-ab9d-1abaf33c0af6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6678.14"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ri = 15000  # Radius of initial orbit in [km]\n",
-    "rf = 8000   # Radius of final orbit in [km]"
+    "hi = 300         # Altitude of initial orbit in [km]\n",
+    "ri = R + hi; ri  # Radius of initial orbit in [km]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bbac4047-8678-4082-a705-224e9e60fa0b",
+   "id": "b14dd177-55a5-48c8-942c-4466342551fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11500.0"
+       "6678.14"
       ]
      },
      "execution_count": 3,
@@ -41,19 +52,20 @@
     }
    ],
    "source": [
-    "a = (ri + rf) / 2; a  # Semi-major axis of transfer ellipe in [km]"
+    "hp = 300         # Altitude of pericenter in [km]\n",
+    "rp = R + hp; rp  # Radius of pericenter in [km]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "51741d1d-6d19-455f-84bc-4c024c9de501",
+   "id": "915226e3-2d69-40b6-bffe-b701875986ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.6897396249126668"
+       "9378.14"
       ]
      },
      "execution_count": 4,
@@ -62,19 +74,20 @@
     }
    ],
    "source": [
-    "Vi = (μ/ri)**0.5; Vi  # Velocity on initial orbit in [km/s]"
+    "ha = 3000        # Altitude of apocenter in [km]\n",
+    "ra = R + ha; ra  # Radius of apocenter in [km]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f02b3be0-78ec-44d3-9acd-da2f1e371286",
+   "id": "bbac4047-8678-4082-a705-224e9e60fa0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.4093402711907441"
+       "8028.139999999999"
       ]
      },
      "execution_count": 5,
@@ -83,19 +96,19 @@
     }
    ],
    "source": [
-    "Vat = (2*μ/ri - μ/a)**0.5; Vat  # Velocity at apocenter of transfer ellipse in [km/s]"
+    "a = (rp + ra) / 2; a  # Semi-major axis of the final orbit in [km]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e2b23146-aa18-4f3b-83c8-a15208613421",
+   "id": "51741d1d-6d19-455f-84bc-4c024c9de501",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2803993537219227"
+       "7.725758091679103"
       ]
      },
      "execution_count": 6,
@@ -104,19 +117,19 @@
     }
    ],
    "source": [
-    "ΔV1 = abs(Vat - Vi); ΔV1  # ΔV for first maneuver in [km/s]"
+    "Vi = (μ/ri)**0.5; Vi  # Velocity on initial circular orbit in [km/s]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dddb129f-3f69-4d3b-8e2d-6ef78a8e82a2",
+   "id": "f02b3be0-78ec-44d3-9acd-da2f1e371286",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.6425130084826454"
+       "8.350106076022488"
       ]
      },
      "execution_count": 7,
@@ -125,19 +138,19 @@
     }
    ],
    "source": [
-    "Vpt = (2*μ/rf - μ/a)**0.5; Vpt  # Velocity at pericenter of transfer ellipse in [km/s]"
+    "Vpf = (2*μ/ri - μ/a)**0.5; Vpf  # Velocity at pericenter of final orbit in [km/s]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "29a3bf70-f1df-407b-a753-0001454be055",
+   "id": "e2b23146-aa18-4f3b-83c8-a15208613421",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.313771272187465"
+       "0.6243479843433848"
       ]
      },
      "execution_count": 8,
@@ -146,49 +159,7 @@
     }
    ],
    "source": [
-    "Vf = (μ/rf)**0.5; Vf  # Velocity on final orbit in [km/s]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "d8a48b1f-ff85-4280-9790-447545a481fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.32874173629518033"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ΔV2 = abs(Vf - Vpt); ΔV2  # ΔV for second maneuver in [km/s]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "ca7a69b5-0c95-4041-9243-55735e356320",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.609141090017103"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ΔV = ΔV1 + ΔV2; ΔV  # Total ΔV in [km/s]"
+    "ΔV = abs(Vpf - Vi); ΔV  # Required velocity change in [km/s]"
    ]
   }
  ],
