--- a/problems/RFM-07_Solution_Problem_2.ipynb
+++ b/problems/RFM-07_Solution_Problem_2.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "# Constants for this problem\n",
-    "μ = 42828.3  # Gravitational parameter of Mars in [km^3/s^2]\n",
-    "R = 3397     # Mars radius in [km]"
+    "μ = 324858.8  # Gravitational parameter of Venus in [km^3/s^2]\n",
+    "R = 6051.8    # Venus radius in [km]"
    ]
   },
   {
@@ -19,20 +19,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ri = 15000  # Radius of initial orbit in [km]\n",
-    "rf = 8000   # Radius of final orbit in [km]"
+    "ai = -17110.0  # Semi-major axis of (initial) hyperbolic trajectory in [km]\n",
+    "ei = 1.3690    # Eccentricity of (initial) hyperbolic trajectory\n",
+    "af = 10424.1   # Semi-major axis of (final) mapping orbit in [km]\n",
+    "ef = 0.39433   # Eccentricity of (final) mapping orbit"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bbac4047-8678-4082-a705-224e9e60fa0b",
+   "id": "b14dd177-55a5-48c8-942c-4466342551fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11500.0"
+       "6313.59"
       ]
      },
      "execution_count": 3,
@@ -41,19 +43,19 @@
     }
    ],
    "source": [
-    "a = (ri + rf) / 2; a  # Semi-major axis of transfer ellipe in [km]"
+    "rp = ai * (1 - ei); rp  # Pericenter radius in [km]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "51741d1d-6d19-455f-84bc-4c024c9de501",
+   "id": "74e308db-c72e-4583-a295-85f17eef8834",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.6897396249126668"
+       "261.78999999999996"
       ]
      },
      "execution_count": 4,
@@ -62,19 +64,19 @@
     }
    ],
    "source": [
-    "Vi = (μ/ri)**0.5; Vi  # Velocity on initial orbit in [km/s]"
+    "hp = rp - R; hp  # Altitude at pericenter in [km]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f02b3be0-78ec-44d3-9acd-da2f1e371286",
+   "id": "222dfae3-2f47-4761-b56b-22cf40883018",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.4093402711907441"
+       "11.040574188228986"
       ]
      },
      "execution_count": 5,
@@ -83,19 +85,19 @@
     }
    ],
    "source": [
-    "Vat = (2*μ/ri - μ/a)**0.5; Vat  # Velocity at apocenter of transfer ellipse in [km/s]"
+    "Vpi = (2*μ/rp - μ/ai)**0.5; Vpi  # Velocity at pericenter of initial trajectory in [km/s]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e2b23146-aa18-4f3b-83c8-a15208613421",
+   "id": "e94fbb04-1065-4f63-acc2-b2b160d3150b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2803993537219227"
+       "8.470158496094207"
       ]
      },
      "execution_count": 6,
@@ -104,19 +106,19 @@
     }
    ],
    "source": [
-    "ΔV1 = abs(Vat - Vi); ΔV1  # ΔV for first maneuver in [km/s]"
+    "Vpf = (2*μ/rp - μ/af)**0.5; Vpf  # Velocity at pericenter of final orbit in [km/s]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dddb129f-3f69-4d3b-8e2d-6ef78a8e82a2",
+   "id": "e2b23146-aa18-4f3b-83c8-a15208613421",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.6425130084826454"
+       "2.5704156921347785"
       ]
      },
      "execution_count": 7,
@@ -125,19 +127,19 @@
     }
    ],
    "source": [
-    "Vpt = (2*μ/rf - μ/a)**0.5; Vpt  # Velocity at pericenter of transfer ellipse in [km/s]"
+    "ΔV = abs(Vpf - Vpi); ΔV  # Required velocity change in [km/s]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "29a3bf70-f1df-407b-a753-0001454be055",
+   "id": "ef36e8c9-28f4-481a-80be-16dcec1404ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.313771272187465"
+       "14534.635353000001"
       ]
      },
      "execution_count": 8,
@@ -146,19 +148,19 @@
     }
    ],
    "source": [
-    "Vf = (μ/rf)**0.5; Vf  # Velocity on final orbit in [km/s]"
+    "ra = af * (1 + ef); ra  # Apocenter radius of final orbit in [km]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d8a48b1f-ff85-4280-9790-447545a481fd",
+   "id": "519c7d48-1815-4c15-a57f-fa6322729a33",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.32874173629518033"
+       "8482.835353000002"
       ]
      },
      "execution_count": 9,
@@ -167,28 +169,7 @@
     }
    ],
    "source": [
-    "ΔV2 = abs(Vf - Vpt); ΔV2  # ΔV for second maneuver in [km/s]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "ca7a69b5-0c95-4041-9243-55735e356320",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.609141090017103"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ΔV = ΔV1 + ΔV2; ΔV  # Total ΔV in [km/s]"
+    "ha = ra - R; ha  # Altitude at apocenter of final orbit in [km]"
    ]
   }
  ],
