Improvement in solution for Parker Solar Probe.

--- a/code/RFM-04_Parker_Solar_Probe.ipynb
+++ b/code/RFM-04_Parker_Solar_Probe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "c039262a-7087-4ee4-af54-eb71b5d3d218",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "6aec806d-d74c-45af-b286-fff5e68907f9",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "85687e23-d3b3-4304-9e1e-b09ec4096074",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "(8529523.200000001, 0.057016340941809955)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "88a4bb83-7a3a-486a-bf4b-c2143d022739",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "12.255062068965518"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,28 +69,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "4a11bd16-4c41-4f4c-9fc5-3825796cda2d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "162.543744"
+       "(162.543744, 585157.4784)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Vp = 101 * mile; Vp  # Velocity at pericenter in [km/s]"
+    "Vp = 101 * mile  # Velocity at pericenter in [km/s]\n",
+    "Vp, Vp*3600  # Output in [km/s] and [km/h]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "06b89a7c-69b2-435e-ba17-ff64120e1a8d",
    "metadata": {},
    "outputs": [
@@ -100,19 +101,19 @@
        "(28249288.833425947, 0.1888348323491609)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = rp / (2 - rp * Vp**2 / μS); a  # Semi-major axis in [km]\n",
+    "a = rp / (2 - rp * Vp**2 / μS)  # Semi-major axis in [km]\n",
     "a, a/au  # Output in [km] and [au]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "1587d906-623c-449e-a358-4d7dc3a6d6e9",
    "metadata": {},
    "outputs": [
@@ -122,7 +123,7 @@
        "0.6980623742319683"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "c4eebe07-da34-4ce0-89bb-aab86f93036f",
    "metadata": {},
    "outputs": [
@@ -143,7 +144,7 @@
        "(2589615.7636436317, 29.972404671801293)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
