--- a/code/RFM-04_Parker_Solar_Probe.ipynb
+++ b/code/RFM-04_Parker_Solar_Probe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "c039262a-7087-4ee4-af54-eb71b5d3d218",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "6aec806d-d74c-45af-b286-fff5e68907f9",
    "metadata": {},
    "outputs": [],
@@ -26,39 +26,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "85687e23-d3b3-4304-9e1e-b09ec4096074",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8529523.200000001, 0.057016340941809955)"
+       "(9225523.200000001, 0.06166881357890879)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rp = 5.3e6 * mile  # Pericenter radius in [km]\n",
+    "rp = RS + 5.3e6 * mile  # Pericenter radius in [km]\n",
     "rp, rp/au  # Output in [km] and [au]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "88a4bb83-7a3a-486a-bf4b-c2143d022739",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12.255062068965518"
+       "13.255062068965518"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "4a11bd16-4c41-4f4c-9fc5-3825796cda2d",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
        "(162.543744, 585157.4784)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,17 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "06b89a7c-69b2-435e-ba17-ff64120e1a8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(28249288.833425947, 0.1888348323491609)"
+       "(56467509.82160265, 0.37746198898005207)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,17 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "1587d906-623c-449e-a358-4d7dc3a6d6e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6980623742319683"
+       "0.8366224537057483"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,17 +134,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
+   "id": "52ee85ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103709496.4432053, 0.6932551643811954)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ra = a * (1 + e)  # Apocenter radius in [km]\n",
+    "ra, ra/au  # Output in [km] and [au]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "c4eebe07-da34-4ce0-89bb-aab86f93036f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2589615.7636436317, 29.972404671801293)"
+       "(7318498.7933120765, 84.7048471448157)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
