--- a/problems/RFM-07_Solution_Problem_12.ipynb
+++ b/problems/RFM-07_Solution_Problem_12.ipynb
@@ -18,8 +18,8 @@
    "outputs": [],
    "source": [
     "# Constants for this problem\n",
-    "μ = 398600.4  # Gravitational parameter of Earth in [km^3/s^2]\n",
-    "R = 6378.14   # Earth radius in [km]"
+    "μ = 398600.4  # Gravitational parameter of Earth [km^3/s^2]\n",
+    "R = 6378.14   # Earth radius [km]"
    ]
   },
   {
@@ -30,10 +30,10 @@
    "outputs": [],
    "source": [
     "# Given values for this problem\n",
-    "h  =  500            # Orbit altitude in [km]\n",
-    "r  = R + h           # Orbit radius in [km]\n",
-    "ra = 30000           # Apocenter radius in [km]\n",
-    "Δi = np.deg2rad(90)  # Inclination change in [rad]"
+    "h  =  500            # Orbit altitude [km]\n",
+    "r  = R + h           # Orbit radius [km]\n",
+    "ra = 30000           # Apogee radius [km]\n",
+    "Δi = np.deg2rad(90)  # Inclination change [rad]"
    ]
   },
   {
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "a = (r + ra) / 2; a  # Semi-major axis of the elliptic orbit in [km]"
+    "a = (r + ra) / 2; a  # Semi-major axis of the elliptic orbit [km]"
    ]
   },
   {
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "# ΔV to \"hop onto\" the elliptic orbit in [km/s]\n",
+    "# ΔV to \"hop onto\" the elliptic orbit [km/s]\n",
     "V   = (μ / r)**0.5\n",
     "Vp  = (2*μ / r - μ / a)**0.5\n",
     "ΔV1 = abs(Vp - V); ΔV1"
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "# ΔV to change inclination at pericenter of elliptic orbit [km/s]\n",
+    "# ΔV to change inclination at apogee of elliptic orbit [km/s]\n",
     "Va   = (2*μ / ra - μ / a)**0.5\n",
     "ΔV2 =   2*Va * np.sin(Δi/2); ΔV2"
    ]
@@ -132,7 +132,7 @@
     }
    ],
    "source": [
-    "# ΔV to finally re-circularize elliptic orbit in [km/s]\n",
+    "# ΔV to finally re-circularize elliptic orbit [km/s]\n",
     "ΔV3 = ΔV1; ΔV3  # due to symmetry"
    ]
   },
@@ -154,7 +154,7 @@
     }
    ],
    "source": [
-    "# Total ΔV for the three-impulse inclination change in [km/s]\n",
+    "# Total ΔV for the three-impulse inclination change [km/s]\n",
     "ΔV_3i = ΔV1 + ΔV2 + ΔV3; ΔV_3i"
    ]
   },
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "ΔV_1i - ΔV_3i  # Absolute difference in ΔV in [km/s]"
+    "ΔV_1i - ΔV_3i  # Absolute difference in ΔV [km/s]"
    ]
   },
   {
@@ -241,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
